--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,130 @@
+.parallax-div {
+    height: 35px;
+    background: url("http://graphicsheat.com/wp-content/uploads/2013/06/Pink_Background_by_deamaral.jpg");
+    background-size: cover;
+    background-attachement: fixed;
+}
+
+.parallax-text {
+    overflow: hidden;
+    background: #fff;
+    color: #3a3a3a;
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    mix-blend-mode: lighten;
+    margin-top: 0px;
+    height: 35px;
+}
+
 h2.title {
     color: #6666ff !important;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 900;
     margin: 0 15px;
     text-transform: uppercase;
     margin-bottom: 30px;
     margin-top: 20px;
     padding-bottom: 10px;
     position: relative;
+}
+
+.slide {
+    height: 350px;
+    width: auto;
+}
+
+.product-image-wrapper {
+    /*border:1px solid #6666ff;*/
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.marg-left {
+    margin-left: 75px!important;
+}
+
+.productinfo h2 {
+    color: #6666ff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.product-overlay h2 {
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.productinfo p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-width: 800px;
+    color: #696763;
+}
+
+.productinfo {
+    position: relative;
+}
+
+/* tỉ lệ % độ lớn của ảnh*/
+.productinfo img {
+    height: 230px;
+    width: auto;
+}
+
+.navbar-custom {
+    background: #eee;
+}
+
+div.polaroid {
+    position: relative;
+    width: 190px;
+    text-align: center;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.back-gr {
+    background: #f8f8f8;
+}
+
+.saigo {
+    height: 230px;
+    width: 170px;
+    margin: auto;
+    background-size: 100% 230px;
+}
+
+div.margin-top {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.margin-top20 {
+    margin-top: 20px;
+}
+
+.btn-custom {
+    width: 100px;
+}
+
+.margin {
+    margin: 60px 0px 10px 0px;
+}
+
+h4.oneline {
+    color: #7575ff;
+    overflow: hidden;
+    font-family: 'Roboto', sans-serif;
+    height: 20px;
+}
+
+.dropdown-toggle {
+    width: 200px!important;
 }
