--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -18,7 +18,7 @@
     padding-top: 0;
     overflow: hidden;
     text-align: center;
-    background-color: #fff;
+    /*background-color: #fff;*/
     background-color: rgba(255, 255, 255, 1);
 }
 .card.hovercard .card-background {
@@ -80,4 +80,70 @@
 }
 .btn-pref .btn {
     -webkit-border-radius:0 !important;
+}
+
+
+.user-row {
+    margin-bottom: 14px;
+}
+
+.user-row:last-child {
+    margin-bottom: 0;
+}
+
+.dropdown-user {
+    margin: 13px 0;
+    padding: 5px;
+    height: 100%;
+}
+
+.dropdown-user:hover {
+    cursor: pointer;
+}
+
+.table-user-information > tbody > tr {
+    border-top: 1px solid rgb(221, 221, 221);
+}
+
+.table-user-information > tbody > tr:first-child {
+    border-top: 0;
+}
+
+
+.table-user-information > tbody > tr > td {
+    border-top: 0;
+}
+
+.toppad
+{margin-top:20px;
+}
+
+.tangerine {
+    font-family: 'Tangerine';
+    font-size: 58px;
+    text-shadow: 4px 4px 4px #aaa;
+}
+
+.ultra {
+    font-family: 'Ultra';
+    font-size: 20px;
+    /*text-shadow: 2px 2px 4px #aaa;*/
+}
+
+.ribeye {
+    font-family: 'Ribeye';
+    font-size: 48px;
+    text-shadow: 2px 2px 4px #aaa;
+}
+
+.lobster {
+    font-family: 'Lobster';
+    font-size: 20px;
+    /*text-shadow: -2px -2px 5px #aaa;*/
+}
+
+.helvet {
+    font-family: 'Helvetica';
+    font-size: 48px;
+    text-shadow: -2px -2px 5px #aaa;
 }
